<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout style="@style/SettingLayout">

            <TextView
                style="@style/SettingCaption"
                android:text="@string/qname" />

            <EditText
                android:id="@+id/s_qname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="enter the name" />
        </LinearLayout>

        <LinearLayout style="@style/SettingLayout">

            <TextView
                style="@style/SettingCaption"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/numvars" />

            <EditText
                android:id="@+id/s_numvars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout style="@style/SettingLayout">

            <TextView
                style="@style/SettingCaption"
                android:layout_marginTop="10dp"
                android:text="@string/numreps" />
        </LinearLayout>

        <LinearLayout style="@style/SettingLayout">

            <TextView
                style="@style/SettingCaption"
                android:text="@string/dirtrans" />

            <EditText
                android:id="@+id/s_dirtrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout style="@style/SettingLayout">

            <TextView
                style="@style/SettingCaption"
                android:text="@string/revtrans" />

            <EditText
                android:id="@+id/s_revtrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout style="@style/SettingLayout">

            <TextView
                style="@style/SettingCaption"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/intses" />
        </LinearLayout>

        <EditText
            android:id="@+id/s_intses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="8 48 168 336" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button android:id="@+id/scancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@android:string/cancel"/>

            <Button android:id="@+id/sok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@android:string/ok"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
